# AI-Autonomous-Knowledge-Workflow-Platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md  __init__.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  agents.py  chat.py  documents.py  health.py  search.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/integrations/: notion.py
backend/app/models/db/: documents.py
backend/app/models/schemas/: agents.py  chat.py  documents.py
backend/app/services/: agents.py  documents.py  embeddings.py  llm.py  search.py
backend/tests/: conftest.py  test_agent_api.py  test_chat.py  test_chat_rag.py  test_documents.py  test_documents_api.py  test_health.py  test_search_api.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  DocumentUpload.tsx  HealthStatus.tsx  SearchPanel.tsx
frontend/components/__tests__/: ChatPanel.test.tsx  DocumentUpload.test.tsx  HealthStatus.test.tsx  test-utils.tsx
frontend/lib/: api.ts
sample_docs/: sample-notes.docx
scripts/: make_sample_docs.py  notion_update.py
